--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-sdk
+        android:minSdkVersion="24"
+        android:targetSdkVersion="34"
+        tools:overrideLibrary="com.android.car.ui" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,6 +17,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Final"
         tools:targetApi="31">
+        <activity
+            android:name=".MenuActivity"
+            android:exported="false" />
         <activity
             android:name=".ChooseLanActivity"
             android:exported="false" />
