--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,17 +17,35 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Final"
         tools:targetApi="31">
+
+        <activity
+            android:name=".ChangepassActivity"
+            android:exported="false" />
+        <activity
+            android:name=".accountinfo"
+            android:exported="false" />
+        <activity
+            android:name=".accoptionActivity"
+            android:exported="false" />
+        <activity
+            android:name=".accandlogActivity"
+            android:exported="false" />
+        <activity
+            android:name=".EditActivity"
+            android:exported="false" />
         <activity
             android:name=".MenuActivity"
-            android:exported="false" />
+            android:exported="false"
+            />
         <activity
             android:name=".ChooseLanActivity"
             android:exported="false" />
+
         <activity
             android:name=".DashboardActivity"
             android:exported="false" />
         <activity
-            android:name=".SettingActivity"
+            android:name=".SettingsActivity"
             android:exported="false" />
         <activity
             android:name=".MapActivity"
@@ -35,18 +53,20 @@
         <activity
             android:name=".SignInActivity"
             android:exported="false" />
+
         <activity
             android:name=".WelcomeActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".SignUpActivity"
             android:exported="false" />
+
     </application>
 
 </manifest>
